--- a/css/custom.css
+++ b/css/custom.css
@@ -637,12 +637,14 @@ progress {
 }
 @media (min-width: 768px) {
   .container-md, .container-sm, .container {
-    max-width: 720px;
+    max-width: 1200px;
+    width: 100%;
   }
 }
 @media (min-width: 992px) {
   .container-lg, .container-md, .container-sm, .container {
-    max-width: 960px;
+    max-width: 1200px;
+    width: 100%;
   }
 }
 @media (min-width: 1200px) {
